# waycap-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: clippy.yml  docs.yml
examples/: record_and_save.rs  record_and_save_nvenc.rs  record_and_save_vaapi.rs  simple_record.rs  test_image.rs
portal-screencast-waycap/: Cargo.toml  README.md
src/: lib.rs  utils.rs  waycap_egl.rs
src/capture/: audio.rs  mod.rs  video.rs
src/encoders/: audio.rs  cuda.rs  dma_buf_encoder.rs  dynamic_encoder.rs  mod.rs  nvenc_encoder.rs  opus_encoder.rs  rgba_image_encoder.rs  vaapi_encoder.rs  video.rs
src/pipeline/: builder.rs
src/types/: audio_frame.rs  config.rs  error.rs  mod.rs  video_frame.rs
