[package]
name = "waycap-rs"
version = "1.0.2"
edition = "2021"
authors = ["Adonis Carvajal <adonis.carvajal2203@gmail.com>"]
description = "High-level Wayland screen capture library with hardware-accelerated encoding"
documentation = "https://adonca2203.github.io/waycap-rs/waycap_rs/"
homepage = "https://github.com/adonca2203/waycap-rs"
repository = "https://github.com/adonca2203/waycap-rs"
license = "MIT"
readme = "README.md"
keywords = ["wayland", "screen-capture", "recording", "linux", "pipewire"]
categories = ["multimedia", "api-bindings", "hardware-support"]
exclude = [
    ".github/",
    "tests/fixtures",
    "examples/*.mp4",
    "*.log",
]

[dependencies]
bytemuck = "1.23.0"
drm-fourcc = "2.2.0"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format"] }
libc = "0.2.172"
log = "0.4.27"
pipewire = "0.8.0"
portal-screencast-waycap = "1.0.0"
simple-logging = "2.0.2"
gl = "0.14.0"
glutin = "0.32.3"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.8"
# Outdated on purpose until I can figure out how to turn the wl_display into a ptr in 3x
wayland-client = {version = "0.29.2", features = ["use_system_lib"] }
wayland-sys = "0.31.6"
image = "0.25.6"
cust = "0.3.2"
crossbeam = "0.8.4"
