[package]
name = "portal-screencast-waycap"
version = "0.1.1"
description = "Rustic interface to the ScreenCast Desktop Portal"
documentation = "https://docs.rs/portal_screencast_waycap"
repository = "https://github.com/Adonca2203/waycap-rs"
license = "MIT"
keywords = ["ffi","screen","capture","dbus","linux"]
authors = ["Adonis Carvajal <adonis.carvajal2203@gmail.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
dbus = "0.9"
rand = "0.8"
bitflags = "1.2"

[build-dependencies]
dbus-codegen = "0.9"
